# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
license_files =
  ../LICENSE.txt
  ../NOTICE.txt

[build_sphinx]
source-dir = doc/
build-dir  = doc/_build

[tool:pytest]
addopts = --ignore=scripts
filterwarnings =
    error:The SparseDataFrame:FutureWarning
# Get a debug traceback when a test takes a really long time
faulthandler_timeout = 300

[pep8]
ignore = E211,E225,E226,E227,E402,W504
max_line_length = 88

[flake8]
max-line-length = 88
