[package]
name = "arrow-rs"
version = "0.1.0"
description = "Rust implementation of Apache Arrow"
homepage = "https://github.com/apache/arrow"
repository = "https://github.com/apache/arrow"
authors = ["Andy Grove <andygrove73@gmail.com>"]
license = "Apache-2.0"
keywords = [ "arrow" ]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
name = "arrow"
path = "src/lib.rs"

[dependencies]
bytes = "*"