# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow"
version = "0.11.0"
description = "Rust implementation of Apache Arrow"
homepage = "https://github.com/apache/arrow"
repository = "https://github.com/apache/arrow"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = [ "arrow" ]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2018"

[lib]
name = "arrow"
path = "src/lib.rs"

[dependencies]
bytes = "0.4"
libc = "0.2"
serde = { version = "1.0.80", features = ["alloc", "rc"] }
serde_derive = "1.0.80"
serde_json = "1.0.13"
rand = "0.5"
csv = "1.0.0"
parquet-format = "2.5.0"
quick-error = "1.2.2"
byteorder = "1"
thrift = "0.0.4"
snap = "0.2"
brotli = "2.5"
flate2 = "1.0.2"
lz4 = "1.23"
zstd = "0.4"
chrono = "0.4"
num-bigint = "0.2"
num = "0.2"

[dev-dependencies]
criterion = "0.2"
lazy_static = "1"

[[bench]]
name = "array_from_vec"
harness = false

[[bench]]
name = "builder"
harness = false
